static/css/navbar.css
@media (orientation: landscape){
.navbar-body {
  position: fixed;
  width: 99.3vw;
  height: 3rem;
  box-sizing: border-box;
  z-index: 1;
  top: 0;
  background: #212121;
  padding: 0.8vw 1.1vw 0.7vw 0.7vw;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.diva-logo-img {
  width: 3.6vw;
}

.alcher-logo-img {
  width: 2vw;
}

.alcher-heading {
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
  font-size: 2vw;
  letter-spacing: 1.4px;
}
.alcher-heading a {
  color: white;
  text-decoration: none;
}
}

@media (orientation: portrait){
  .navbar-body {
    position: fixed;
    width: 100vw;
    height: 3rem;
    box-sizing: border-box;
    z-index: 1;
    top: 0;
    background: #212121;
    padding: 0.8vw 1.1vw 0.7vw 0.7vw;
    display: flex;
    align-items: center;
    justify-content: space-between;
  }
  .alcher-heading{
    display: none;
  }
}

